k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsphere

spec:
  replicas: 3

  selector:
    matchLabels:
      app: shopsphere

  template:
    metadata:
      labels:
        app: shopsphere

    spec:
      containers:
        - name: shopsphere
          image: shopsphere:1.0
          imagePullPolicy: Never

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - containerPort: 3000
