k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopsphere

spec:
  selector:
    app: shopsphere

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: NodePort
