k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopsphere

spec:
  ingressClassName: nginx

  rules:
    - host: shopsphere.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopsphere
                port:
                  number: 3000
